--- a/style.css
+++ b/style.css
@@ -13,10 +13,24 @@ body{
   height: 100%;
   padding: 0;
   margin: 0;
+  font-family: 'Rubik' Arial, sans-serif;
+  font-size: 16px;
+  line-height: 22px;
+  color: #4a4b4c;
+  background-color: #fff;
 
 }
 
 img{
 max-width: 100%;
 height: auto;
+}
+
+.container{
+  max-width: 1240px;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
