--- a/style.css
+++ b/style.css
@@ -13,12 +13,40 @@ body{
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: 'Rubik' Arial, sans-serif;
+  font-family: 'Rubik', Arial, sans-serif;
   font-size: 16px;
   line-height: 22px;
   color: #4a4b4c;
-  background-color: #fff;
 
+
+}
+
+/* BUTTON  */
+.button{
+  display: inline-block;
+  border-radius:10px;
+  padding: 13px 20px;
+  font-weight: 500;
+  font-size: 16px;
+  cursor: pointer;
+  line-height: normal;
+  text-align: center;
+  text-decoration: none;
+}
+
+.button-primary{
+background-color: #7296EC;
+color: #fff;
+
+
+}
+
+.button-primary:hover{
+  opacity:0.8;
+}
+
+.button-primary:active{
+  opacity: 0.6;
 }
 
 img{
@@ -33,4 +61,89 @@ height: auto;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+}
+
+/* SITE-HEADE  */
+.site-header {
+
+}
+
+/* SITE-HEADER-TOP  */
+.site-header-top {
+  background-color: #f6f6f6;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.site-header-top-container {
+  display: flex;
+  align-items: center;
+}
+.site-header-logo {
+  display: flex;
+  margin-right: 35px;
+  padding: 8px 6px;
+  background-repeat: 7px;
+  background-color: #fff;
+}
+
+.site-header-logo:hover{
+  opacity: 0.8;
+}
+
+.site-header-logo:active{
+  opacity: 0.6;
+}
+
+
+.site-header-logo-img {
+}
+.currency-rates {
+  display: flex;
+  margin-right: auto;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  margin-right: auto;
+  list-style: none;
+}
+.currency-rates-item:not(:last-child) {
+  margin-right: 25px;
+}
+.currency-rates-type {
+  color: #2959CE;
+
+}
+.currency-rates-value {
+}
+
+/* LANGUAGE-TOGGLE  */
+
+.lang-toggle {
+  display: flex;
+  width: 70;
+  height: 36;
+  margin-right: 25px;
+  background-color: #DCE6FF;
+  border-radius: 39px;
+  padding: 3px;
+
+}
+.lan-toggle-link {
+  color: #a6a6a6;
+  border-radius: 50%;
+  text-decoration: none;
+  line-height: 30px;
+  width: 30px;
+  height: 30px;
+  font-size: 13px;
+  text-align: center;
+}
+
+.lan-toggle-link-active{
+  background-color:#fff;
+  color: black;
+}
+.button {
+}
+.button-primary {
 }
