--- a/style.css
+++ b/style.css
@@ -218,3 +218,82 @@ margin-bottom: 4px;
 .site-header-banner-img{
   display: flex;
 }
+
+
+/* MAIN-CONTENT  */
+.main-content{
+  flex-grow: 1;
+  padding-top: 50px;
+}
+
+/* NEWS-GRID  */
+.news-grid {
+display: flex;
+flex-wrap: wrap;
+margin-left: -10px;
+}
+.news-grid-item {
+  width: 393px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+
+}
+.article-card {
+  display: flex;
+  flex-direction: column;
+  background-color:#f6f6f6;
+  border-radius:15px;
+  padding: 20px 17px 15px;
+
+}
+.article-card-title {
+  padding-top: 0;
+  margin-bottom: 10px;
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: 500;
+}
+.article-card-lonk {
+  display: inline-block;
+  color: #000;
+  text-decoration: none;
+}
+
+.article-card-lonk:hover{
+  color:#7296EC;
+}
+.article-card-lonk:active{
+  opacity: 0.6;
+}
+.article-card-text {
+ margin-top: 0;
+ margin-bottom: 15px;
+}
+.article-card-img {
+  display: block;
+  width: 360px;
+  height: 165px;
+  object-fit: cover;
+  margin-top: auto;
+  margin-bottom: 15px;
+  border-radius: 10px;
+
+}
+.article-card-footer {
+  display: flex;
+  align-items: center;
+}
+.article-card-source-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  border-radius:5px;
+}
+.article-card-source-time {
+  font-size: 12px;
+  line-height: normal;
+  color: #5E5F61;
+
+}
+.article-card-source {
+}
