--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
 /* BUTTON  */
 .button{
   display: inline-block;
+  border: 0;
   border-radius:10px;
   padding: 13px 20px;
   font-weight: 500;
@@ -41,12 +42,17 @@ color: #fff;
 
 }
 
-.button-primary:hover{
+.button:hover{
   opacity:0.8;
 }
 
-.button-primary:active{
+.button:active{
   opacity: 0.6;
+}
+
+.button-orange {
+  background-color:#F78B3B;
+  color: #ffff;
 }
 
 img{
@@ -231,6 +237,7 @@ margin-bottom: 4px;
 display: flex;
 flex-wrap: wrap;
 margin-left: -10px;
+margin-bottom: -10px;
 }
 .news-grid-item {
   width: 393px;
@@ -295,5 +302,18 @@ margin-left: -10px;
   color: #5E5F61;
 
 }
-.article-card-source {
+.notification-cta {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 60px 75px;
+  border-radius: 10px;
+  padding: 25px 75px 25px 25px;
+  background-color: #ffd7ba;
+}
+.notification-cta-text {
+  font-size:20px;
+  line-height: 26px;
+  font-weight: 500;
+  color: #000;
 }
