--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ color: #fff;
   color: #ffff;
 }
 
+.button-block{
+  display: block;
+  width: 100%;
+}
+
 img{
 max-width: 100%;
 height: auto;
@@ -74,6 +79,7 @@ height: auto;
   margin-left: auto;
   margin-right: auto;
 }
+
 
 /* SITE-HEADE  */
 .site-header {
@@ -316,4 +322,180 @@ margin-bottom: -10px;
   line-height: 26px;
   font-weight: 500;
   color: #000;
+}
+
+
+/* GLOBAL-NEWS */
+
+.global-news-heading {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000000;
+}
+.news-list {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+.news-list-item:not(:last-child){
+  margin-bottom: 10px;
+
+}
+
+/* ARTICAL-CARD-HORIZONTAL  */
+.article-card-horizontal {
+  display: flex;
+  align-items: flex-start;
+  background: #F6F6F6;
+  border-radius: 15px;
+  padding: 20px 20px 20px 17px;
+
+}
+.article-card-horizontal-img {
+  width: 210px;
+  height:165px;
+  object-fit: cover;
+  margin-right: 15px;
+  border-radius:10px;
+}
+.article-card-horizontal-content {
+  flex-grow: 1;
+}
+.article-card-horizontal-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+
+}
+
+
+.article-card-horizontal-link {
+  display: inline-block;
+  text-decoration: none;
+  color: #000;
+}
+
+.article-card-horizontal-link:hover{
+ color: #7296EC;
+}
+
+.article-card-horizontal-link:active{
+  opacity: 0.6;
+}
+.article-card-horizontal-text {
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-size: 16px;
+  line-height: 22px;
+}
+.article-card-horizontal-footer {
+display: flex;
+align-items: center;
+
+}
+.article-card-horizontal-source-icon {
+  object-fit: cover;
+  border-radius:5px;
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+}
+.article-card-horizontal-source-time {
+  font-size: 12px;
+  line-height: normal;
+  color: #5E5F61;
+
+}
+
+.news-list-more-button{
+padding: 17px;
+
+}
+
+/* LAYOUT-SIDEBAR  */
+
+.layout-2-1{
+  display: flex;
+  align-items: flex-start;
+}
+
+.layout-2-1-main{
+  width: 797px;
+  margin-right: 10px;
+}
+
+.layout-2-1-sidebar{
+  width: 393px;
+  margin-top: 49px;
+}
+
+.layout-2-1-sidebar-item:not(:last-child){
+  margin-bottom: 10px;
+}
+
+/* NEWS-LIST-SIDEBAR  */
+.sidebar-news-card {
+
+  background-color: #f6f6f6;
+  color: #000;
+  padding: 20px;
+  border-radius: 15px;
+
+}
+.sidebar-news-card-heading {
+  margin-top: 0;
+  margin-bottom: 25px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+}
+.sidebar-news-card-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.sidebar-news-card-item {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.sidebar-news-card-item:first-child {
+padding-top: 0;
+}
+
+.sidebar-news-card-item:last-child{
+  padding-bottom: 0;
+}
+
+.sidebar-news-card-item:not(:last-child){
+ border-bottom: 1px solid #d2d2d2;
+}
+.sidebar-news-card-title {
+  margin-top: 0;
+ margin-bottom: 8px;
+ font-size: 18px;
+ line-height: 24px;
+ font-weight: 500;
+}
+.sidebar-news-card-link {
+  display: inline-block;
+  text-decoration: none;
+  color: #000;
+}
+.sidebar-news-card-link:hover{
+ color: #7296EC;
+}
+
+.sidebar-news-card-source-time {
+font-size: 13px;
+line-height: normal;
+color:#5E5F61;
+
+}
+.sidebar-news-card-source {
 }
