--- a/style.css
+++ b/style.css
@@ -140,12 +140,16 @@ margin-right: 25px;
 {
   border: 0;
   border-radius: 60px;
-font-size: 14px;
-line-height: normal;
-padding-top: 15px;
-padding-bottom: 13px;
-padding-left: 41px;
-padding-right: 20px;
+  font-size: 14px;
+  line-height: normal;
+  padding-top: 15px;
+  padding-bottom: 13px;
+  padding-left: 41px;
+  padding-right: 20px;
+  background-image: url(./img/search.svg);
+  background-repeat:no-repeat;
+  background-position: 15px center;
+  background-size: 20px;
 }
 
 /* LANGUAGE-TOGGLE  */
@@ -191,6 +195,7 @@ padding-bottom: 12px;
 
 .sitenav:not(:last-child){
   margin-bottom: 40px;
+
 }
 .sitenav-list {
   display: flex;
@@ -306,6 +311,8 @@ margin-bottom: -10px;
   color: #5E5F61;
 
 }
+
+/* CTA  */
 .notification-cta {
   display: flex;
   align-items: center;
@@ -314,6 +321,10 @@ margin-bottom: -10px;
   border-radius: 10px;
   padding: 25px 75px 25px 25px;
   background-color: #ffd7ba;
+  background-image: url(./img/Group\ 35\ 1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
 .notification-cta-text {
   font-size:20px;
@@ -623,4 +634,100 @@ color:#5E5F61;
 
 .socials-img:active{
   opacity: 0.6;
+}
+
+
+/* CONTACT PAGE  */
+
+.contact-page-content{
+  display: flex;
+}
+
+.contact-page-heading{
+  margin-top: 0;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 500;
+  color: #000;
+  margin-bottom: 20px;
+}
+
+.contact-page-form{
+  display: flex;
+  width: 696px;
+  flex-direction: column;
+}
+
+/* FORM  */
+
+.form-field{
+  display: block;
+  width: 100%;
+  padding: 18px 20px;
+  border: 1px solid rgb(0, 0, 0, 0.2);
+  border-radius: 10px ;
+}
+
+.form-groups-wrapper{
+display: flex;
+justify-content:space-between;
+}
+.form-groups-wrapper:not(:last-child){
+  margin-bottom: 10px;
+}
+.form-groups-wrapper .form-group{
+  margin-bottom:0;
+  width: calc(50% - 5px);
+}
+
+.form-field-textarea{
+  min-height: 180px;
+  resize: vertical;
+}
+
+.form-group:not(:last-child){
+  margin-bottom: 10px;
+}
+
+.contact-page-bottom{
+  margin-top: 20px;
+  align-self: flex-end;
+}
+
+/* DEFINITIONS-CARD  */
+.contcat-page-definitions-card {
+
+}
+.definitions-card {
+  padding: 20px 25px;
+  border-radius: 10px;
+  display: block;
+  width: 100%;
+background-color: #f6f6f6;
+color: #000;
+margin: 0;
+}
+.definitions-card-item {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.definitions-card-item:not(:last-child){
+border-bottom: 1px solid #d2d2d2;
+}
+.definitions-card-title {
+  font-weight: 500;
+  margin-bottom: 7px;
+  font-size: 20px;
+  font-weight: 24px;
+}
+.definitions-card-value {
+  margin: 0;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.contcat-page-info{
+  width: 494px;
+  margin-left: 10px;
 }
